moved ipsolver to repair

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@
 LIBDIR=-L/home/christian/lib/cplex-12.7.0/lib/x86-64_linux/static_pic -L/home/christian/lib/cplex-12.7.0/concert/lib/x86-64_linux/static_pic
 INCDIR=-I/home/christian/lib/cplex-12.7.0/concert/include/ -I/home/christian/lib/cplex-12.7.0/include/
 
-CCFLAGS=-g -pedantic -Wall -std=c++11 -DIL_STD $(INCDIR)
+CCFLAGS=-O3 -pedantic -Wall -std=c++11 -DIL_STD $(INCDIR)
 LDFLAGS=$(LIBDIR)
 
 STATIC_LIBS=-lconcert -lilocplex -lcplexdistmip -lcplex -lpthread
